[metadata]
name = adsb
version = 0.1.0
author = Brian Blain
author_email = 
description = This Python project uses RTL-SDR to retrieve radio samples for the ADS-B frequency of 1090 and publishes those samples to a Kafka topic.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bkblain/aircraft-adsb
project_urls =
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
license_files = LICENSE.txt
keywords=
    adsb
    Development

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src